[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal_designability"
version = "0.1.0"
description = "Designing new metrics using feedback covariate shift for seq + str-aware protein design"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Seyone Chithrananda", email = "seyonec@berkeley.edu" }
]
dependencies = [
    "torch>=2.0.0",
    "biotite",
    "pyg",
    "esm>=2.0.0",
    "jaxtyping",
]

[tool.setuptools]
packages = ["conformal_designability"]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pre-commit>=5.0.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = ["D100", "D104", "E721", "E731", "F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["conformal_designability"]
